proof-of-concepts/poc-k8s-gcp/kubernetes-deployments/dft-streetworks-ux/dft-streetworks-ux-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dft-street-manager-ux-deployment
spec:
  selector:
    matchLabels:
      app: dft-street-manager-ux
  replicas: 2
  template:
    metadata:
      labels:
        app: dft-street-manager-ux
    spec:
      containers:
      - name: dft-street-manager-ux
        image: 583284001540.dkr.ecr.eu-west-2.amazonaws.com/dft-streetworks-ux:latest
        ports:
        - containerPort: 3000
