proof-of-concepts/poc-k8s-gcp/kubernetes-deployments/dft-streetworks-ux/dft-streetworks-ux-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dft-street-manager-ux
  name: dft-street-manager-ux-service
spec:
  selector:
    app: dft-street-manager-ux
  ports:
  - port: 80
    targetPort: 3000
#  type: LoadBalancer
