proof-of-concepts/poc-k8s-gcp/kubernetes-deployments/dft-streetworks-ux/dft-streetworks-ux-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dft-streetworks-ux-ingress
spec:
  backend:
    serviceName: dft-street-manager-ux-service
    servicePort: 80
